force-app/main/default/objects/locobuzz__Social_Post__c/locobuzz__Social_Post__c.object-meta.xml
<CustomObject>
    <description>This object is used to stored Social Post which are send via Locobuzz</description>
    <label>Social Post</label>
    <nameField>
        <label>Social Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>