force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPLICATION</fullName>
            </value>
            <value>
                <fullName>AUDIO</fullName>
            </value>
            <value>
                <fullName>IMAGE</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>VIDEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>