force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Attachment_Url__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Attachment_Url__c</fullName>
    <label>Attachment Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>