force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__BrandGuid__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__BrandGuid__c</fullName>
    <formula>locobuzz__Case__r.locobuzz__BrandGuid__c</formula>
    <label>BrandGuid</label>
    <type>Text</type>
</CustomField>