force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Can_Reply_As_DM__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Can_Reply_As_DM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Reply As DM</label>
    <type>Checkbox</type>
</CustomField>