force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Case__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Social Posts</relationshipLabel>
    <relationshipName>Social_Posts1</relationshipName>
    <type>Lookup</type>
</CustomField>