force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Comment_Count__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Comment_Count__c</fullName>
    <label>Comment Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>