force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Content_Document_Id__c</fullName>
    <description>This field store Content Document Id related to file</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>