force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Content_Version_Id__c</fullName>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>