force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__External_Post_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__External_Post_Id__c</fullName>
    <label>External Post Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>