force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Headline__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Headline__c</fullName>
    <label>Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>