force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Is_DM__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Is_DM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store whether reply is posted as DM or not</description>
    <label>Is DM</label>
    <type>Checkbox</type>
</CustomField>