force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Is_Outbound__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Is_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>