force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Language__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>