force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Locobuzz_ID__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Locobuzz_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Locobuzz ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>