force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Message__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>