force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Notes__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>