force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Post_Categorization__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Post_Categorization__c</fullName>
    <label>Post Categorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>