force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Post_Url__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Post_Url__c</fullName>
    <label>Post Url</label>
    <type>Url</type>
</CustomField>