force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>