force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Quote_Re_Tweet__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Quote_Re_Tweet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Re-Tweet</label>
    <type>Checkbox</type>
</CustomField>