force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Quote_Re_Tweet_Parent_Post_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Quote_Re_Tweet_Parent_Post_Id__c</fullName>
    <label>Quote Re-Tweet Parent Post Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>