force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Reply_Saved_By_Locobuzz__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Reply_Saved_By_Locobuzz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by locobuzz when they sent reply from locobuzz to salesforce</description>
    <label>Reply Saved By Locobuzz</label>
    <type>Checkbox</type>
</CustomField>