force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Reply_To__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Reply_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In Reply To</label>
    <referenceTo>locobuzz__Social_Post__c</referenceTo>
    <relationshipLabel>Social Posts</relationshipLabel>
    <relationshipName>Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>