force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>SomewhatNegative</fullName>
            </value>
            <value>
                <fullName>SomewhatPositive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>