force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Shares__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Shares__c</fullName>
    <label>Shares</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>