force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Social_Handle__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Social_Handle__c</fullName>
    <label>Social Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>