force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Social_Persona__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Social_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Persona</label>
    <referenceTo>locobuzz__Social_Persona__c</referenceTo>
    <relationshipLabel>Social Posts</relationshipLabel>
    <relationshipName>Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>