force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Tag_Id__c</fullName>
    <label>Tag Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>