force-app/main/default/objects/locobuzz__Social_Post__c/fields/locobuzz__Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Ticket_Id__c</fullName>
    <formula>locobuzz__Case__r.locobuzz__Ticket_Id__c</formula>
    <label>Ticket Id</label>
    <type>Text</type>
</CustomField>