force-app/main/default/objects/locobuzz__Social_Post__c/listViews/locobuzz__All.listView-meta.xml
<ListView>
    <fullName>locobuzz__All</fullName>
    <columns>NAME</columns>
    <columns>locobuzz__Case__c</columns>
    <columns>locobuzz__Message__c</columns>
    <columns>locobuzz__Posted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>